<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.xxschrandxx.wsc</groupId>
	<artifactId>wscauthenticator</artifactId>
	<version>1.0.3</version>

	<name>WSC-Minecraft-Authenticator</name>
	<url>https://github.com/xXSchrandXx/WSC-Minecraft-Authenticator</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<repositories>
		<!-- Spigot & Bungee Repo -->
		<repository>
			<id>spigot-bungee-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
		</repository>
		<!-- Librelogin Repo-->
		<repository>
			<id>kyngs-repo-public</id>
			<name>Repository</name>
			<url>https://repo.kyngs.xyz/public</url>
		</repository>
	</repositories>

	<dependencies>
		<!-- Spigot Dep -->
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.21.5-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<!-- Bungee Dep -->
		<dependency>
			<groupId>net.md-5</groupId>
			<artifactId>bungeecord-api</artifactId>
			<version>1.21-R0.3-SNAPSHOT</version>
		</dependency>
		<!-- LibreLogin Dep-->
		<dependency>
			<groupId>xyz.kyngs.librelogin</groupId>
			<artifactId>API</artifactId>
			<version>0.24.0</version>
		</dependency>
		<!-- WSC-Minecraft-Bridge -->
		<dependency>
			<groupId>de.xxschrandxx.wsc</groupId>
			<artifactId>wscbridge</artifactId>
			<version>2.0.5</version>
		</dependency>
	</dependencies>

	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<executions>
					<execution>
						<phase>compile</phase>
						<configuration>
							<source>${maven.compiler.source}</source>
							<target>${maven.compiler.source}</target>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.1.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<phase>package</phase>
						<configuration>
							<source>${maven.compiler.source}</source>
							<javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
							<additionalparam>-Xdoclint:all -Xdoclint:-missing</additionalparam>
							<additionalOptions>-Xdoclint:all -Xdoclint:-missing</additionalOptions>
							<additionalJOptions>
								<additionalJOption>-Xdoclint:all</additionalJOption>
								<additionalJOption>-Xdoclint:-missing</additionalJOption>
							</additionalJOptions>
						</configuration>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<issueManagement>
		<system>Issues</system>
		<url>https://github.com/xXSchrandXx/WSC-Minecraft-Authenticator/issues/new</url>
	</issueManagement>
</project>